Revision history for Pod::Weaver::Section::Support

{{$NEXT}}

1.002
	Released: 2011-02-02 22:55:07 UTC

	Fix a few typos in the POD
	Add email section to contact the author
	Make the perldoc section a proper header
	Tweaked the wording of the bugs section ( thanks DAGOLDEN! )
	Add attribute to specify the bugs content ( thanks DAGOLDEN! )
	Add attribute to specify the website content

1.001
	Released: 2010-12-08 07:35:41 UTC

	Add attributes to control the repository section ( thanks RWSTAUNER! )
	Reorganized the layout of the generated POD
	Add attribute to control the website links ( thanks GETTY! )
	Add attributes for new irc section ( thanks GETTY! )
	Add attribute to control the bugs section ( thanks GETTY! )
	Add attribute to enable/disable perldoc section ( thanks GETTY! )
	Add attribute to enable/disable SUPPORT section for all modules ( thanks GETTY! )

1.000
	Released: 2010-05-30 18:03:49 UTC

	Work with CPAN Meta v2 by recognizing the repository
	Make the repository hunk of POD optional

0.010
	Released: 2010-05-28 17:41:54 UTC

	fixed the way the stopwords were added to the POD

0.009
	Released: 2010-05-13 01:41:59 UTC

	another fake release

0.008
	Released: 2010-05-12 04:50:01 UTC

0.007
	Released: 2010-05-11 21:12:28 UTC

0.006
	Released: 2010-05-11 17:05:55 UTC

	Tweaked the POD a little, and make another release...

0.005
	Released: 2010-05-11 06:26:29 UTC

	real CPAN release, ha!

0.004
	Released: 2010-05-11 06:25:00 UTC

	add example weaver.ini

0.003
	Released: 2010-05-11 06:16:15 UTC

	yet another test release

0.002
	Released: 2010-05-11 06:13:52 UTC

	test release

0.001
	Released: 2010-05-11 03:29:40 UTC

	initial release